fix(docs) : remove /api/v1 as it is already the base url
